--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.6.0",
     "mongoose": "^8.0.0",
-    "node-cron": "^4.2.1"
+    "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "open": "^11.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
