--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
-    "open": "^11.0.0"
+    "open": "^11.0.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
