--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.975.0",
     "@aws-sdk/s3-request-presigner": "^3.975.0",
+    "@google/generative-ai": "^0.24.1",
     "aws-sdk": "^2.1693.0",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
@@ -33,6 +34,7 @@
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "node-fetch": "^2.7.0",
     "open": "^11.0.0",
     "sharp": "^0.34.5"
   },
